.provarCaches/00D410000011HE0EAM/objects/rstk__rtopertask__c.object
<CustomObject>
    <description>rtopertask__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This is an internal system field defined by the formula_extid field.  Neither the formula_extid, nor the externalid field itself, is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__rtopertask_rtroutoper__r.rstk__externalid__c &amp; &apos;_&apos; &amp; rstk__rtopertask_taskid__c</formula>
        <inlineHelpText>This is an internal system field used to define the externalID of a record. which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>Text(rstk__rtopertask_rtroutoper__r.rstk__rtroutoper_oper__c) &amp; &apos;_&apos; &amp; rstk__rtopertask_taskid__c</formula>
        <inlineHelpText>Internal formula for constructing the associated name field, which is an internal system field, not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is an internal system field used to define the searchindex of a record, which is also an internal system field. Neither is currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__rtopertask_assignto__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Mfg User assinged to this task.</inlineHelpText>
        <label>Assigned To User</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipLabel>Routing Template Operation Tasks</relationshipLabel>
        <relationshipName>syusrRtopertasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__rtopertask_desc__c</fullName>
        <inlineHelpText>The user-defined description of this task.</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__rtopertask_rtroutoper__c</fullName>
        <inlineHelpText>The user-defined operation number to be performed for this Operation Task record.  Where multiple records are created, the numbering sequence defines the order in which the operations are performed.</inlineHelpText>
        <label>Routing Operation</label>
        <referenceTo>rstk__rtroutoper__c</referenceTo>
        <relationshipLabel>Routing Template Operation Tasks</relationshipLabel>
        <relationshipName>rtopertasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__rtopertask_taskid__c</fullName>
        <inlineHelpText>The user-assigned ID that represents this task.</inlineHelpText>
        <label>Task ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>This is an internal system field not currently displayed on any Rootstock User pages</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>This is an internal system field which is not currently displayed on any Rootstock User pages.</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Routing Template Operation Tasks</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routing Template Operation Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>